kubernetes/manifests/app-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: cnvrg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnvrg
  template:
    metadata:
      labels:
        app: cnvrg
    spec:
      containers:
      - name: cnvrg
        image: app:1.0
        ports:
        - containerPort: 3000
