kubernetes/manifests/app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: cnvrg
spec:
  selector:
    app: cnvrg
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    name: http
  # - protocol: TCP
  #   port: 443
  #   name: https
