kubernetes/manifests/app-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: myapp
spec:
  # tls:
  # - hosts:
  #   - myapp.com.br
  #   secretName: app-tls
  rules:
  - host: myapp.com.br
    http:
      paths:
      - backend:
          serviceName: app-service
          servicePort: 3000
